--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity android:name=".ConfigurationsActivity" />
         <activity android:name=".InviteActivity" />
         <activity android:name=".AlarmsActivity"></activity>
+
+        <receiver android:name=".AlarmReceiver" />
+        <service android:name=".RingtonePlayingService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
