--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,15 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".ConfigurationsActivity" />
         <activity android:name=".InviteActivity" />
-        <activity android:name=".AlarmsActivity"></activity>
+        <activity android:name=".AlarmsActivity" />
 
         <receiver android:name=".AlarmReceiver" />
-        <service android:name=".RingtonePlayingService"
-            android:enabled="true"/>
+
+        <service
+            android:name=".RingtonePlayingService"
+            android:enabled="true" />
+
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
